Added CSS and Bootsrap

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,5 @@
-<% @books.each do |book| %>
+<!-- <% @books.each do |book| %>
   <li> <%=book.title%></li>
-<% end %>
+<% end %> -->
+
+<%= render "/home/all_book"%>
