--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,10 +18,11 @@
 </div> -->
 <%= render "users/form"%>
 <%= render "users/form", user: @user %>
+<%= render "all_book" %>
+<%= render "footer" %>
 
 
-
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>Book Container View</title>
@@ -45,5 +46,6 @@
   </div>
 </div>
 </body>
-</html>
+</html> -->
+
 
