--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,12 +2,21 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
   
 }
 nav{
+  position: fixed;
+  top:0;
+  width: 100%;
+  height: 10%;
   background-color: darkcyan;
-  height: auto;
-  /* padding: 20px; */
+  min-height: min-content;  /* padding: 20px; */
+}
+
+nav.logo {
+  display: inline-block; /* Ensures the span only takes the space it needs */
+  text-align: left;      /* Aligns the content inside the span to the left */
 }
 .header_bar a{
  color: white;
@@ -20,7 +29,7 @@ nav{
   size: 4px;
   display: inline-block;
   /* align-items:; */
-  justify-content: space-between;
+  justify-content: space-around;
   
   
 }
@@ -34,10 +43,12 @@ body{
 }
 
 footer{
-  /* for hiding footer */
-  /* display: none;  */
+  /* for hiding footer  */
+  /* display: none;   */
+  position: static;
   width: 100%;
-  height: auto;
+  height: 7%;
+  
   color: aliceblue;
   background-color: darkcyan;
   padding: 10px;
@@ -46,7 +57,7 @@ footer{
   text-shadow:  2px 2px 8px black;
 }
 
-.table_prop th{
+/* .table_prop th{
   color: red;
  
 }
@@ -59,7 +70,7 @@ footer{
   display: flex;
   font-size: 20px;
   justify-content: center;
-}
+} */
 
 
 footer p{
@@ -74,31 +85,45 @@ footer p a{
 
 
 
-
-.wrapper{
-  display: flex;
-  flex-wrap: wrap; /* Add this to enable wrapping */
+/* 
+.container{
+  display: grid;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  flex-wrap: wrap; /* Add this to enable wrapping 
   justify-content: space-between; 
   width:100%;
   height: auto;
+} */
+
+
+.container{
+  display: grid;
+  padding-top: 30px;
+  grid-row-gap: 20px
+  
 }
+/* .container,row{
 
+  margin-bottom: 20px;
 
+} */
 
 
 .book-container {
-  flex: 0 0 calc(33.33% - 20px); /* 33.33% for 3 items in a row, minus 20px for spacing */
-  margin-bottom: 20px;
+  
+  margin-bottom: 5px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  width: 200px;
-  height: 200px;
+  width: 280px;
+  height: 250px;
+ 
   flex-direction: row;
 }
 
 .book-image img {
-  width: 50px;
-  height: 15px;
+  width: 100px;
+  height: auto;
   object-fit: cover;
   border-radius: 4px;
 }
@@ -109,25 +134,28 @@ footer p a{
 }
 
 .book-title {
-  font-size: 24px;
+  font-size: 20px;
   margin: 0;
+  /* width: fit-content; */
 }
 
 .book-author,
 .book-publisher {
-  font-size: 14px;
+  font-size: 15px;
   margin: 8px 0;
+  /* width: fit-content; */
 }
 
-.borrow-button {
+/* .borrow-button {
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 4px;
-  padding: 8px 16px;
+  padding: 8px 10px;
   font-size: 16px;
   cursor: pointer;
-}
+  /* width: fit-content;
+} */
 
 .borrow-button:hover {
   background-color: #0056b3;
