--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,7 @@
   <%= link_to "All Books", view_all_books_path%>
   <%= link_to "My Books", my_books_path%>
 
-  
 
   <%end%>
+
+  <%= render "home/footer" %>
