--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -9,7 +9,7 @@
         <li><a href="welcome">Contact</a></li>
         <li><a href="\">Home</a></li>
         <%if user_signed_in?%>
-            <li><%= button_to "Sign out", destroy_user_session_path, method: :delete %></li>
+            <li><%= button_to "Sign out", destroy_user_session_path(current_user), method: :delete %></li>
             <li><%= link_to  "About", user_path(current_user) %></li>
         <%else%>
         <li><%= link_to  "Sign in", new_user_session_path %></li>
