--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,3 +3,5 @@
 <p>Author name:  <%= @book.author.name%></p>
 <p>Publisher Name:  <%= @book.publisher.name%></p>
 <p>Published Date:  <%= @book.published_date%></p>
+
+<%= link_to "Back", :back, class: "btn btn-secondary", style: "margin-top: 10px;" %>
