--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,10 @@
   <%= current_user.phone_no%><br>
   </div>
   <%# <%= current_user.borrowed_books%> 
-  <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
-  <%= link_to "edit", edit_user_path%>
-  <%= link_to "All Books", view_all_books_path%>
-  <%= link_to "My Books", my_books_path%>
+  <%= button_to "Sign out", destroy_user_session_path, method: :delete ,class:"btn btn-primary" %>
+  <%= link_to "Update Profile", edit_user_path, class:"btn btn-primary"%>
+  <%= link_to "All Books", view_all_books_path, class:"btn btn-primary"%>
+  <%= link_to "My Books", my_books_path, class:"btn btn-primary"%>
 
 
   <%end%>
