Added Librarian Functionality

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,6 @@
 <!-- views/books/edit.html.erb -->
+<%= render "home/header"%>
+
 
 <h1 style="text-align: center;">Edit Book</h1>
 
@@ -46,3 +48,4 @@
 
   <%= link_to "Back", :back, class: "btn btn-secondary", style: "margin-top: 10px;" %>
 </div>
+
