--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,7 @@
 <!-- <% @books.each do |book| %>
   <li> <%=book.title%></li>
 <% end %> -->
+<%= render "home/header"%>
 
 <%= render "/home/all_book"%>
+
