--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,7 @@
 <!-- views/books/edit.html.erb -->
 
 <!-- views/books/new.html.erb -->
+<%= render "home/header"%>
 
 <h1 style="text-align: center;">New Book</h1>
 
