--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,5 @@
-
+<%= render "home/header"%>
+<%= render "home/footer" %>
 <p>Title:  <%= @book.title%></p>
 <p>Author name:  <%= @book.author.name%></p>
 <p>Publisher Name:  <%= @book.publisher.name%></p>
