--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,6 +3,9 @@ body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  background-image: url('background-image.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   
 }
 nav{
@@ -10,11 +13,11 @@ nav{
   top:0;
   width: 100%;
   height: 10%;
-  background-color: darkcyan;
+  background-color: #181818;
   min-height: min-content;  /* padding: 20px; */
 }
 
-nav.logo {
+.header_bar nav .logo {
   display: inline-block; /* Ensures the span only takes the space it needs */
   text-align: left;      /* Aligns the content inside the span to the left */
 }
@@ -34,10 +37,15 @@ nav.logo {
   
 }
 H1{
+  padding-top: 20px;
   color: darkblue;
 }
 
 .welcome_msz{
+  display: flex;
+  /* justify-content: ; */
+  align-items: center;
+  justify-content: center;
   padding-top: 20px;
 }
 
@@ -52,11 +60,11 @@ footer{
   /* display: none;   */
   position: static;
   width: 100%;
-  height: 7%;
-  
+  height: auto;
+  left: 0;
   color: aliceblue;
-  background-color: darkcyan;
-  padding: 10px;
+  background-color: #212121;
+  padding: 1px;
   position: fixed;
   bottom: 0;
   text-shadow:  2px 2px 8px black;
@@ -80,6 +88,7 @@ footer{
 
 footer p{
   font-size: 20px;
+  margin-top: 10px;
 }
 footer p a{
   
@@ -165,4 +174,6 @@ footer p a{
 .borrow-button:hover {
   background-color: #0056b3;
 } */ 
-
+nav ul li a:hover {
+  color: lightskyblue;
+}
