--- a/app/views/home/_all_book.html.erb
+++ b/app/views/home/_all_book.html.erb
@@ -11,9 +11,17 @@
           <p class="book-author"> Author: <%=  book.author.name %></p>
           <p class="book-publisher">Publisher: <%=  book.author.name %></p>
           <%if user_signed_in?%>
-            <%= link_to "Borrow", class:"btn btn-primary" %>
-            <!-- <button class="btn btn-primary"> Borrow </button> -->
-            <%= link_to "View", book_path(book.id), class:"btn btn-primary" %>
+            <%if current_user.user_type == "librarian"%>
+              <%= link_to "Destroy", book_path(book.id), data: {
+                      turbo_method: :delete,
+                      turbo_confirm: "Are you sure? You want to delete this Book"
+                    } ,class:"btn btn-primary" %>
+              <%= link_to "View", book_path(book.id), class:"btn btn-primary" %>
+            <%else%>
+              <%= link_to "Borrow", borrow_book_user_path(book_id: book.id), class:"btn btn-primary" %>
+              <!-- <button class="btn btn-primary"> Borrow </button> -->
+              <%= link_to "View", book_path(book.id), class:"btn btn-primary" %>
+             <% end %>
           <%else%>
             <%= link_to "View", book_path(book.id), class:"btn btn-primary" %>
           <% end %>
@@ -42,4 +50,4 @@
     </div>
     <% end %> -->
 
-    borrow_book_path(book.id),
+    <%# borrow_book_path(book.id),"borrow_book/#{book.id}" %>
