--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -131,7 +131,6 @@ footer p a{
   border-radius: 8px;
   width: 280px;
   height: 250px;
- 
   flex-direction: row;
 }
 
@@ -177,3 +176,39 @@ footer p a{
 nav ul li a:hover {
   color: lightskyblue;
 }
+
+
+.cards {
+  margin: 0 auto;
+  text-align: center;
+	display: -webkit-flex;
+	display: flex;
+  border-radius: 10px;
+	-webkit-justify-content: center; 
+  justify-content: center;
+  -webkit-flex-wrap: wrap; 
+	flex-wrap: wrap;
+	margin-top: 15px;
+	padding: 1.5%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box; 
+  box-sizing: border-box; 
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.cards:hover {
+  box-shadow: 0 4px 10px rgba(0,0,0,0.16), 0 4px 10px rgba(0,0,0,0.23);
+}
+
+.user_about{
+  display: flex;
+ 
+  justify-content: center;
+  padding: 20px;
+  align-content: space-evenly;
+  gap: 40px;
+
+}
+
+
+
