--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -46,6 +46,11 @@
                              class: "form-control" %>
     </div>
 
+    <div style="margin-bottom: 10px;">
+    <%= f.label :Choose_Book_Cover, style: "font-weight: bold;" %>
+    <%= f.file_field :cover, class: "form-control" %>
+    </div>
+
     <div>
       <%= f.submit "Create Book", class: "btn btn-primary" %>
     </div>
