--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,7 +12,7 @@
             <li><%= link_to  "Sign in", new_user_session_path %></li>
             <li><%= link_to "Sign up",  new_user_registration_path, method: :post %></li>
         <%end%> 
-        <li><a href="welcome">Contact</a></li>
+        <li><a href="#">Contact</a></li>
         
         <%# <%if user_signed_in?%>
           <%# <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %>
