--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,36 @@
-<%= render "home/header"%>
-<h1>About<h1>
-  <%if user_signed_in?%>
-    <div class="font-size:20px">
-      <p>
-    <%if current_user.avatar.attached?%>
-    <%= image_tag current_user.avatar, size:"200"%>
-    <%end%><br>
-    <%#= current_user.id%>
-    <%= current_user.email%><br>
-    <%= current_user.first_name%><br>
-    <%= current_user.address%><br>
-    <%= current_user.phone_no%>
-    </p>
-    </div>
-    <%# <%= current_user.borrowed_books%> 
-    <%= button_to "Sign out", destroy_user_session_path, method: :delete ,class:"btn btn-primary" %>
-    <%= link_to "Update Profile", edit_user_path, class:"btn btn-primary"%>
-    <%#= link_to "All Books", view_all_books_path, class:"btn btn-primary"%>
-    <%= link_to "My Books", my_books_path, class:"btn btn-primary"%>
-  <%end%>
-
+<div class="user_profile">
+  <%= render "home/header"%>
+  <div>
+    <h1>About</h1>
+      <%if user_signed_in?%>
+        <div class="user_about">
+          <div class="img-rounded" width="304" height="236">
+            <img class="img-fluid rounded", alt="Profile image"
+              <%if current_user.avatar.attached?%>
+                <%= image_tag current_user.avatar, size:"200"%>
+              <%end%>
+          </div>
+          
+          <div style=" padding-top: 3%;">
+            <h4>
+              <p>Name : <%= current_user.first_name%></p>
+              <p>Phone : <%= current_user.phone_no%></p>
+              <p>Address : <%= current_user.address%></p>
+              <p>Gmail : <%= current_user.email%></p>
+            </h4>
+          </div>
+        </div>
+        <div>
+          <%# <%= current_user.borrowed_books%> 
+          <%= button_to "Sign out", destroy_user_session_path, method: :delete ,class:"btn btn-primary" %>
+          <br>
+          <%= link_to "Update Profile", edit_user_path, class:"btn btn-primary"%>
+          <%#= link_to "All Books", view_all_books_path, class:"btn btn-primary"%>
+          <%= link_to "My Books", my_books_path, class:"btn btn-primary"%>
+        </div>
+      <%end%>
+  </div>
+  <br>
+  <br>
   <%= render "home/footer" %>
+<div>
