--- a/app/views/home/_all_book.html.erb
+++ b/app/views/home/_all_book.html.erb
@@ -9,7 +9,7 @@
         <div class="book-info">      
           <h2 class="book-title"><b>Title: <%= book.title %></b></h2>
           <p class="book-author"> Author: <%=  book.author.name %></p>
-          <p class="book-publisher">Publisher: <%=  book.author.name %></p>
+          <p class="book-publisher">Publisher: <%=  book.publisher.name %></p>
           <%if user_signed_in?%>
             <%if current_user.user_type == "librarian"%>
               <%= link_to "Destroy", book_path(book.id), data: {
@@ -17,17 +17,21 @@
                       turbo_confirm: "Are you sure? You want to delete this Book"
                     } ,class:"btn btn-primary" %>
               <%= link_to "View", book_path(book.id), class:"btn btn-primary" %>
+            
             <%else%>
               <%= link_to "Borrow", borrow_book_user_path(book_id: book.id), class:"btn btn-primary" %>
               <!-- <button class="btn btn-primary"> Borrow </button> -->
               <%= link_to "View", book_path(book.id), class:"btn btn-primary" %>
-             <% end %>
+            <% end %>
+
           <%else%>
             <%= link_to "View", book_path(book.id), class:"btn btn-primary" %>
           <% end %>
+          
           <% if can? :update, @books%>
             <%= link_to "Edit", edit_book_path(book),class:"btn btn-primary" %>
           <% end %>
+
         </div>
       </div>
     </div>
