--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,18 +4,18 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, <%#= @user.name %></h1>
+    <h1>Welcome to eLibrary.com, <%= @user.email%></h1>
     <p>
       You have successfully signed up to elibrary.com,
      
     </p>
     <p>
-      To login to the site, just follow this link: <%#= @url %>.
+      To login to the site, just follow this link: <%= @url %>
     </p>
-    <p>Thanks for joining and have a great day!</p>
+    <p>Thanks for joining Us and have a great day!</p>
 
     <p>Hello there, this is our image</p>
 
-    <%#= image_tag attachments['image.jpeg'].url %>
+    <%= image_tag attachments['b.jpg'].url %>
   </body>
 </html>
