--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -6,13 +6,14 @@
         
         <span class="logo"><%= image_tag 'b.jpg',width: '100', height: '50'%></span>
         <li><a href="\">Home</a></li>
+        <li><a href="#">Contact</a></li>
         <%if user_signed_in?%>
-            <li><%= link_to  "About", user_path(current_user) %></li>
+            <li><%= link_to  "Profile", user_path(current_user) %></li>
         <%else%>
             <li><%= link_to  "Sign in", new_user_session_path %></li>
             <li><%= link_to "Sign up",  new_user_registration_path, method: :post %></li>
         <%end%> 
-        <li><a href="#">Contact</a></li>
+        
         
         <%# <%if user_signed_in?%>
           <%# <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %>
